--- a/_config.yml
+++ b/_config.yml
@@ -25,12 +25,12 @@ urls:
 # Edit Author details (For multi authors check _data/authors.yml)
 
 author_logo: profile.png
-author: John Doe
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "mail@sujaykundu.com"
-author_location: India
-author_website_url: "https://sujaykundu.com"
-typewrite-text: devlopr is a jekyll framework built for developers. You can edit this in _config.yml file
+author: Junghoo
+author_bio: 프론트엔드 개발자가 되는 그날까지 :D
+author_email: "wjdgn1115@gmail.com"
+author_location: South Korea
+author_website_url: #"https://sujaykundu.com"
+typewrite-text: 블로그에 방문해 주셔서 감사합니다 ^^ 
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
